--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
-
-*,
-*::before,
-*::after {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
     font-family: 'Poppins', sans-serif;
-    background-color: #000;
-    color: #fff;
+}
+body {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: grey;
 }
 
-/* Add your css  */
+.calculator {
+    border: 1px solid aqua;
+    padding: 20px;
+    border-radius: 15px;
+    background: pink;
+}
+.display {
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+
+input {
+    width: 320px;
+    border: aquamarine;
+    padding: 24px;
+    margin: 10px;
+    background: white;
+    font-size: 40px;
+    text-align: right;
+    cursor: pointer;
+    border-radius: 10px;
+    flex: 1;
+}
+button {
+    border: none;
+    outline: 0;
+    width: 60px;
+    height: 60px;
+    font-size: 20px;
+    margin: 10px;
+    border-radius: 10px;
+    background: aquamarine;
+}
+.operator {
+    color: blue;
+}
